fixed issue where chat/input box would overlap on mobile

--- a/static/styles/mobile.css
+++ b/static/styles/mobile.css
@@ -46,11 +46,12 @@ float: none;
     }
 
 .agent {
-width: 20%;
+width: 15vw;
 float: none;
 text-align: left;
 border-right: none;
 border-bottom: 1px solid #000;
+overflow: hidden;
 }
 .message {
 width: 80%;
