--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -72,6 +72,7 @@ input {
     }
 
 .top-row {
+    min-height: 80vh;
     display: block;
     border-bottom: 2px solid #000;
     overflow-y: auto;
